--- a/wagtailio/services/templates/services/blocks/section.html
+++ b/wagtailio/services/templates/services/blocks/section.html
@@ -1,8 +1,7 @@
 {% load wagtailcore_tags %}
 {% with value as section  %}
-    <section>
+    <section id="{{ section.title|slugify }}">
         <h2>{{ section.title }}</h2>
-        A section block
         {% for block in section.content %}
             {% include_block block %}
         {% endfor %}
