--- a/wagtailio/services/templates/services/blocks/card.html
+++ b/wagtailio/services/templates/services/blocks/card.html
@@ -8,6 +8,6 @@
     <p>
         {{ card.text }}
     </p>
-    <a href="{{card.link}}">Find out more</a>
+    <a href="{{card.link}}">{{ card.link_text }}</a>
 </div>
 {% endwith %}
