Add services stylesheet and font scale

--- a/wagtailio/static/css/main.scss
+++ b/wagtailio/static/css/main.scss
@@ -64,6 +64,7 @@
 @import "pages/homepage";
 @import "pages/newsletter-index";
 @import "pages/packages";
+@import "pages/services";
 @import "pages/standard";
 @import "pages/features";
 @import "pages/developers";
