Add page header content element
This just feels cleaner and is similar to what I think I will implement
for the separate content sections.

Also, I have reduced the SCSS nesting

--- a/wagtailio/services/templates/services/services_page.html
+++ b/wagtailio/services/templates/services/services_page.html
@@ -5,17 +5,19 @@
 {% block content %}
     <div class="page-content">
         <header class="page-heading ">
-            <h1 class="page-heading__heading">{{ page.title }}</h1>
-            {% if page.intro %}
-                <div class="page-heading__introduction">
-                    {{ page.intro }}
-                </div>
-            {% endif %}
-            <ul class="page-heading__links">
-                {% for section in page.body %}
-                    <li><a href="#{{ section.value.title|slugify }}">{{ section.value.title }}</a></li>
-                {% endfor %}
-            </ul>
+            <div class="page-heading__content">
+                <h1 class="page-heading__heading">{{ page.title }}</h1>
+                {% if page.intro %}
+                    <div class="page-heading__introduction">
+                        {{ page.intro }}
+                    </div>
+                {% endif %}
+                <ul class="page-heading__links">
+                    {% for section in page.body %}
+                        <li><a href="#{{ section.value.title|slugify }}">{{ section.value.title }}</a></li>
+                    {% endfor %}
+                </ul>
+            </div>
         </header>
         <div class="container">
             {% include_block page.body %}
