--- a/wagtailio/services/templates/services/blocks/card.html
+++ b/wagtailio/services/templates/services/blocks/card.html
@@ -1,13 +1,12 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 {% with value as card %}
-<div>
-    <p>CARD</p>
+<div class="card">
     <div>
         {% image card.image fill-138x110%}
     </div>
-    <p>
+    <div class="card__text">
         {{ card.text }}
-    </p>
+    </div>
     <a href="{{card.link}}">{{ card.link_text }}</a>
 </div>
 {% endwith %}
