--- a/wagtailio/services/templates/services/blocks/section.html
+++ b/wagtailio/services/templates/services/blocks/section.html
@@ -1,9 +1,12 @@
 {% load wagtailcore_tags %}
 {% with value as section  %}
-    <section id="{{ section.title|slugify }}">
-        <a href="#{{ section.title|slugify }}"><h2>{{ section.title }}</h2></a>
-        {% for block in section.content %}
-            {% include_block block %}
-        {% endfor %}
+    <section id="{{ section.title|slugify }}" class="section">
+        <div class="section__content">
+            <hr class="section__heading-line">
+            <a href="#{{ section.title|slugify }}"><h2 class="section__heading">{{ section.title }}</h2></a>
+            {% for block in section.content %}
+                {% include_block block %}
+            {% endfor %}
+        </div>
     </section>
 {% endwith %}
