--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -5,61 +5,87 @@
 */
 .template-services-page {
 
+  $content-width: 800px;
+
   color: $color--primary;
 
   .page-content {
     margin: 0 $gutter;
     padding: 112px 0 0;
 
-    h2,
-    h3,
-    h4 {
-      text-align: left;
-      max-width: 800px;
-      margin: 0 auto ($gutter);
-    }
+    // h2,
+    // h3,
+    // h4 {
+    //   text-align: left;
+    //   max-width: 800px;
+    //   margin: 0 auto ($gutter);
+    // }
 
-    h2 {
-      font-size: 28px;
-    }
+    // h2 {
+    //   font-size: 28px;
+    // }
 
-    h3 {
-      font-size: 21px;
-    }
+    // h3 {
+    //   font-size: 21px;
+    // }
 
-    h4 {
-      font-size: $gutter;
-    }
+    // h4 {
+    //   font-size: $gutter;
+    // }
   }
 
   .page-heading {
+    margin: 0;
+    padding: 0 0 20px;
     text-align: left;
 
     &__content {
       margin: 0 auto;
-      max-width: calc(1440px - 286px - 210px);
+      max-width: $content-width;
     }
 
     &__heading {
       margin: 0 0 24px;
-      max-width: 800px;
       font-size: 72px;
       line-height: 1;
     }
 
     &__introduction {
       margin: 0 0 24px;
-      max-width: 800px;
       font-size: 24px;
     }
 
     &__links {
+      margin: 0;
       font-size: 18px;
       font-weight: 400;
     }
   }
 
+  .section {
+    margin: 0 (-$gutter);
+    padding: 120px $gutter;
+
+    &__content {
+      margin: 0 auto;
+      max-width: $content-width;
+    }
+
+    &__heading-line {
+      margin: 0 0 30px;
+      width: 50px;
+      border: 2.5px solid $color--lagoon;
+      border-radius: 5px;
+    }
+
+    &__heading {
+      font-size: 44px;
+      line-height: 1.1;
+    }
+  }
+
   .cards-section {
+    margin: 60px 0 0;
     display: flex;
     height: 332px;
     align-items: stretch;
