--- a/wagtailio/static/css/variables.scss
+++ b/wagtailio/static/css/variables.scss
@@ -10,6 +10,9 @@ $color--blue: #2f128d;
 $color--dark-blue: #251657;
 $color--coral: #fd5765;
 $color--lagoon: #3beccd;
+$color--deep-indigo: #251657;
+$color--lighter-indigo: #514579;
+$color--wagtailio-grey: #F4F3F6;
 
 $color--grey: #555;
 $color--grey-light: #f4f3f6;
