Add card background

--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -128,6 +128,7 @@
   .card {
     width: 280px;
     border: 1px solid $color--border-light;
+    background-color: $color--white;
 
     &__text {
       font-size: 14px;
