--- a/wagtailio/static/css/variables.scss
+++ b/wagtailio/static/css/variables.scss
@@ -12,10 +12,11 @@ $color--coral: #fd5765;
 $color--lagoon: #3beccd;
 $color--deep-indigo: #251657;
 $color--lighter-indigo: #514579;
-$color--wagtailio-grey: #F4F3F6;
+$color--wagtailio-grey: #f4f3f6;
 
+$color--grey-3: #e6e6e6;
 $color--grey: #555;
-$color--grey-light: #f4f3f6;
+$color--grey-light: $color--wagtailio-grey;
 $color--grey-dark: #333;
 $color--grey-darker: #222;
 
