--- a/wagtailio/services/templates/services/blocks/link_button.html
+++ b/wagtailio/services/templates/services/blocks/link_button.html
@@ -1,4 +1,4 @@
-<a href="{{ value.link }}">
+<a href="{{ value.link }}" class="button button--primary button--hover">
     {% if value.lead_text %}{{value.lead_text}} {% endif %}
     <strong>{{value.action_text}}</strong>
     ⇱
