--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -24,6 +24,16 @@
     margin: 0 $gutter;
     padding: 112px 0 0;
 
+    .button--hover {
+      font-weight: normal;
+      color: $color--primary;
+    }
+
+    & > .container .button--hover:hover {
+      // Override for .page-content > .container a
+      border-bottom-color: $color--lagoon;
+    }
+
     // h2,
     // h3,
     // h4 {
@@ -135,6 +145,5 @@
       line-height: 1.5;
       text-align: center;
     }
-
   }
 }
