Add image to template
This pointed out some issue with the card overflow. This is still not
great and needs some more work.

I just needed to create a somewhat working commit.

--- a/wagtailio/services/templates/services/blocks/cards-section.html
+++ b/wagtailio/services/templates/services/blocks/cards-section.html
@@ -1,8 +1,10 @@
 {% load wagtailcore_tags %}
 {% with value  as card_section %}
-<div class="cards-section">
-    {% for card in card_section  %}
-        {% include_block card %}
-    {% endfor %}
-</div>
+    <div class="cards-section">
+        <div class="cards-container">
+            {% for card in card_section  %}
+                {% include_block card %}
+            {% endfor %}
+        </div>
+    </div>
 {% endwith %}
