--- a/wagtailio/services/templates/services/blocks/section.html
+++ b/wagtailio/services/templates/services/blocks/section.html
@@ -1,14 +1,21 @@
-{% load wagtailcore_tags %}
+{% load wagtailcore_tags wagtailimages_tags %}
 {% with value as section %}
 <section id="{{ section.title|slugify }}" class="section section--{{ section_modifier }}">
-    <div class="section__content">
-        <hr class="section__heading-line">
-        <a href="#{{ section.title|slugify }}">
-            <h2 class="section__heading">{{ section.title }}</h2>
-        </a>
-        {% for block in section.content %}
-            {% include_block block %}
-        {% endfor %}
+    <div class="section__inner-wrapper">
+        {% if section.section_image %}
+            <div class="section__image">
+                {% image section.section_image fill-390x390 %}
+            </div>
+        {% endif %}
+        <div class="section__content">
+            <hr class="section__heading-line">
+            <a href="#{{ section.title|slugify }}">
+                <h2 class="section__heading">{{ section.title }}</h2>
+            </a>
+            {% for block in section.content %}
+                {% include_block block %}
+            {% endfor %}
+        </div>
     </div>
 </section>
 {% endwith %}
