--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -111,15 +111,46 @@
     }
 
     &__inner-wrapper {
-      max-width: 1300px;
+      max-width: 1200px;
+      margin: 0 auto;
       display: flex;
       flex-direction: row;
       justify-content: center;
     }
 
-    &__image img {
-      border-radius: 390px;
+    &__image {
+      margin: 0 90px 0 0;
+
+      img {
+        border-radius: 390px;
+      }
+
+      &-inner {
+        position: relative;
+        height: max-content;
+        width: max-content;
+      }
+
+      &-overlay {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-radius: 100%;
+        background-color: $color--lagoon;
+      }
+
+      &-overlay--var1 {
+        opacity: 0.2;
+        left: -70px;
+      }
+
+      &-overlay--var2 {
+        opacity: 0.1;
+        left: -120px;
+      }
     }
+
+
 
     &__content {
       max-width: $content-width;
