--- a/wagtailio/services/templates/services/services_page.html
+++ b/wagtailio/services/templates/services/services_page.html
@@ -14,7 +14,7 @@
                 <h1 class="page-heading__heading">{{ page.title }}</h1>
                 {% if page.intro %}
                     <div class="page-heading__introduction">
-                        {{ page.intro }} <i class="fas fa-camera"></i>
+                        {{ page.intro }}
                     </div>
                 {% endif %}
                 <ul class="page-heading__links">
