Fix card overflow

--- a/wagtailio/services/templates/services/blocks/cards-section.html
+++ b/wagtailio/services/templates/services/blocks/cards-section.html
@@ -1,10 +1,14 @@
 {% load wagtailcore_tags %}
 {% with value  as card_section %}
     <div class="cards-section">
-        <div class="cards-container">
-            {% for card in card_section  %}
-                {% include_block card %}
-            {% endfor %}
+        <div class="cards-scroller">
+            <div class="cards-padder">
+                <div class="cards-container">
+                    {% for card in card_section  %}
+                        {% include_block card %}
+                    {% endfor %}
+                </div>
+            </div>
         </div>
     </div>
 {% endwith %}
