--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -227,16 +227,65 @@
   .card {
     flex: 0 0 auto;
 
+    position: relative;
     width: 280px;
     height: 332px;
+    padding: 30px 25px 20px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    text-align: center;
 
     border: 1px solid $color--border-light;
+    border-radius: 4px;
     background-color: $color--white;
 
+    &__upper {
+      overflow-y: hidden;
+    }
+
+    &__divider {
+      width: 100%;
+      height: 1px;
+      margin: 30px 0 20px;
+      border: none;
+      background-color: $color--wagtailio-grey;
+    }
+
     &__text {
+      // flex: 1 0 auto;
+      // margin: -20px 0;
+      // padding-bottom: 20px;
+
       font-size: 14px;
       line-height: 1.5;
-      text-align: center;
+
+      & p {
+        // height: 100%;
+        // margin: 20px 0;
+      }
+    }
+
+    &__link {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
+
+    &__button {
+      width: 100%;
+      padding: 10px 10px;
+
+      border: 1px solid black;
+      border-radius: 3px;
+      font-size: 14px;
+      font-weight: bold;
+
+      background-color: $color--white;
     }
   }
 }
