Fix card border style

--- a/wagtailio/services/templates/services/blocks/card.html
+++ b/wagtailio/services/templates/services/blocks/card.html
@@ -11,6 +11,6 @@
         </div>
     </div>
     {% comment %} <a class="card__link" href="{{card.link}}"></a> {% endcomment %}
-    <span class="card__button">{{ card.link_text }}</span>
+    <div class="card__button">{{ card.link_text }}</div>
 </div>
 {% endwith %}
