--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -238,7 +238,7 @@
 
     text-align: center;
 
-    border: 1px solid $color--border-light;
+    border: 1px solid $color--grey-3;
     border-radius: 4px;
     background-color: $color--white;
 
@@ -249,22 +249,17 @@
     &__divider {
       width: 100%;
       height: 1px;
-      margin: 30px 0 20px;
+      margin: 20px 0 20px;
       border: none;
       background-color: $color--wagtailio-grey;
     }
 
     &__text {
-      // flex: 1 0 auto;
-      // margin: -20px 0;
-      // padding-bottom: 20px;
-
       font-size: 14px;
       line-height: 1.5;
 
       & p {
-        // height: 100%;
-        // margin: 20px 0;
+        margin: 20px 0;
       }
     }
 
@@ -280,7 +275,6 @@
       width: 100%;
       padding: 10px 10px;
 
-      border: 1px solid black;
       border-radius: 3px;
       font-size: 14px;
       font-weight: bold;
