--- a/wagtailio/static/css/variables.scss
+++ b/wagtailio/static/css/variables.scss
@@ -14,7 +14,8 @@ $color--deep-indigo: #251657;
 $color--lighter-indigo: #514579;
 $color--wagtailio-grey: #f4f3f6;
 
-$color--grey-3: #e6e6e6;
+$color--grey-3: #e5e5e5;
+$color--grey-4: #d2d2d2;
 $color--grey: #555;
 $color--grey-light: $color--wagtailio-grey;
 $color--grey-dark: #333;
