Add card hover style

--- a/wagtailio/services/templates/services/blocks/card.html
+++ b/wagtailio/services/templates/services/blocks/card.html
@@ -10,7 +10,7 @@
             {{ card.text }}
         </div>
     </div>
-    {% comment %} <a class="card__link" href="{{card.link}}"></a> {% endcomment %}
+    <a class="card__link" href="{{card.link}}"></a>
     <div class="card__button">{{ card.link_text }}</div>
 </div>
 {% endwith %}
