--- a/wagtailio/services/templates/services/blocks/card.html
+++ b/wagtailio/services/templates/services/blocks/card.html
@@ -11,6 +11,7 @@
         </div>
     </div>
     <a class="card__link" href="{{card.link}}"></a>
-    <div class="card__button">{{ card.link_text }}</div>
+    <div class="card__button"><span class="external-link">{{ card.link_text }}</span></div>
+
 </div>
 {% endwith %}
