--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -286,6 +286,10 @@
 
       background-color: $color--white;
       @include transition(background-color $anim-speed-primary ease);
+
+      .external-link::after {
+        padding-left: 5px;
+      }
     }
 
     &:hover {
@@ -295,5 +299,12 @@
         background-color: $color--lagoon;
       }
     }
+  }
+
+  .external-link::after {
+    font-family: "Font Awesome 5 Free";
+    content: "\f35d";
+    display: inline-block;
+    font-weight: 900;
   }
 }
