Add dedicated button style

--- a/wagtailio/services/templates/services/blocks/link_button.html
+++ b/wagtailio/services/templates/services/blocks/link_button.html
@@ -1,5 +1,4 @@
-<a href="{{ value.link }}" class="button button--primary button--hover">
+<a href="{{ value.link }}" class="button">
     {% if value.lead_text %}{{value.lead_text}} {% endif %}
-    <strong>{{value.action_text}}</strong>
-    ⇱
+    <strong class="external-link">{{value.action_text}}</strong>
 </a>
