--- a/wagtailio/templates/includes/svg_sprites.html
+++ b/wagtailio/templates/includes/svg_sprites.html
@@ -15,4 +15,6 @@
     <symbol id="documentation" viewBox="0 0 22.9 24"><path d="M18.7 4.7c-.4 0-.8-.3-.8-.7V0H5.7c-.4 0-.8.3-.8.7v22.5c0 .4.4.8.8.8h16.5c.2 0 .4-.1.5-.2.1-.1.2-.3.2-.5V4.7h-4.2zm0 12.9H8.8v-1.5h9.9v1.5zm0-3.2H8.8v-1.5h9.9v1.5zm0-3.2H8.8V9.7h9.9v1.5zm0-3H8.8V6.7h9.9v1.5zm3.9-5h-3.2v-3l3.2 3zM4.5 0H3.1c-.3 0-.6.3-.6.7v22.5c0 .4.2.8.5.8h1.6S4 24 4 23c0-5.3.1-17.7 0-22.3-.1-.6.5-.7.5-.7z"/><g><path d="M2 0H.6C.3 0 0 .3 0 .7v22.5c0 .4.2.8.5.8h1.6s-.6 0-.6-1c0-5.3.1-17.7 0-22.3C1.3.2 2 0 2 0z"/></g></symbol>
     <!-- close -->
     <symbol id="close" width="24" height="24" viewBox="0 0 24 24"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path><path d="M0 0h24v24H0z" fill="none"></path></symbol>
+    <!-- external-link -->
+    <symbol id="external-link" viewBox="0 0 512 512"><path fill="currentColor" d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"></path></symbol>
 </svg>
