Specify class name of icon

--- a/wagtailio/services/templates/services/blocks/card.html
+++ b/wagtailio/services/templates/services/blocks/card.html
@@ -11,6 +11,6 @@
         </div>
     </div>
     <a class="card__link" href="{{card.link}}"></a>
-    <div class="card__button">{{ card.link_text }}<svg class="external-link" viewBox="0 0 100 100"><use href="#external-link"></svg></div>
+    <div class="card__button">{{ card.link_text }}<svg class="icon__external-link" viewBox="0 0 100 100"><use href="#external-link"></svg></div>
 </div>
 {% endwith %}
