--- a/wagtailio/services/templates/services/blocks/link_button.html
+++ b/wagtailio/services/templates/services/blocks/link_button.html
@@ -1,5 +1,5 @@
 <a href="{{ value.link }}" class="button">
     {% if value.lead_text %}{{value.lead_text}} {% endif %}
     <strong >{{value.action_text}}</strong>
-    <svg class="external-link" viewBox="0 0 100 100"><use href="#external-link"></svg>
+    <svg class="icon__external-link" viewBox="0 0 100 100"><use href="#external-link"></svg>
 </a>
