Add blockquote style

--- a/wagtailio/services/templates/services/blocks/quote.html
+++ b/wagtailio/services/templates/services/blocks/quote.html
@@ -5,7 +5,7 @@
         </p>
         <footer>
             <cite>
-                {{ quote.source }}
+                {{ quote.source|upper }}
                 {% if quote.reference  %} — {{ quote.reference }}{% endif %}
             </cite>
         </footer>
