--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -39,11 +39,12 @@
     content: '';
     width: 14px;
     height: 14px;
-    position: relative;
-    top: 1px;
-    left: 6px;
+    margin: 0 6px -2px;
+    padding-bottom: 2px;
 
+    -webkit-mask: url("/static/img/svg/external-link.svg");
     mask: url("/static/img/svg/external-link.svg");
+    -webkit-mask-size: cover;
     mask-size: cover;
     background-color: $color--primary;
   }
@@ -65,6 +66,11 @@
 
     &:hover {
       background-color: darken($color--secondary, 10%);
+    }
+
+    .external-link::after {
+      width: 16px;
+      height: 16px;
     }
   }
 
