--- a/wagtailio/services/templates/services/blocks/link_button.html
+++ b/wagtailio/services/templates/services/blocks/link_button.html
@@ -1,4 +1,4 @@
 <a href="{{ value.link }}" class="button">
     {% if value.lead_text %}{{value.lead_text}} {% endif %}
-    <strong class="external-link">{{value.action_text}}</strong>
+    <strong >{{value.action_text}}</strong><svg class="icon__external-link" viewBox="0 0 100 100"><use href="#external-link"></svg>
 </a>
