--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -34,19 +34,10 @@
     }
   }
 
-  .external-link::after {
-    display: inline-block;
-    content: '';
-    width: 14px;
+  .icon__external-link {
+    vertical-align: text-top;
     height: 14px;
-    margin: 0 6px -2px;
-    padding-bottom: 2px;
-
-    -webkit-mask: url("/static/img/svg/external-link.svg");
-    mask: url("/static/img/svg/external-link.svg");
-    -webkit-mask-size: cover;
-    mask-size: cover;
-    background-color: $color--primary;
+    padding-left: 6px;
   }
 
   .button {
@@ -66,11 +57,6 @@
 
     &:hover {
       background-color: darken($color--secondary, 10%);
-    }
-
-    .external-link::after {
-      width: 16px;
-      height: 16px;
     }
   }
 
