--- a/wagtailio/templates/includes/svg_sprites.html
+++ b/wagtailio/templates/includes/svg_sprites.html
@@ -1,6 +1,7 @@
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
     <!-- arrow -->
     <symbol id="arrow" viewBox="0 0 500 500"><path d="M416.45 269.508c-5.942-5.945-15.577-5.945-21.52 0l-129.84 142.86V46.792c0-8.612-6.978-15.6-15.582-15.6-8.605 0-15.58 6.987-15.58 15.6v365.563L104.083 269.508c-5.94-5.945-15.576-5.945-21.52 0-5.94 5.952-5.94 15.58 0 21.535l154.427 169.895c.177.25.474.37.663.607.402.52.24 1.26.72 1.73.594.603 1.492.418 2.15.897 2.24 1.775 4.812 2.983 7.83 3.244.343.013.607.255.957.247.07 0 .123.046.198.046.08 0 .146-.04.223-.04.216 0 .38-.11.596-.11 3.67-.21 6.97-1.64 9.53-3.948.226-.21.57-.11.783-.338.215-.204.125-.546.322-.77.18-.198.14-.532.307-.735l155.18-170.727c5.94-5.956 5.94-15.583 0-21.535z"/></symbol>
+    <symbol id="arrow-alt"viewBox="0 0 13 20" xmlns="http://www.w3.org/2000/svg"><rect x="5.48181" width="2" height="19" rx="1"/><rect x="11.4818" y="11" width="2" height="9.77123" rx="1" transform="rotate(42.1939 11.4818 11)"/><rect width="2" height="9.77123" rx="1" transform="matrix(-0.740876 0.671642 0.671642 0.740876 1.48181 11)"/></symbol>
     <!-- social share facebook -->
     <symbol id="social-facebook" viewBox="0 0 32 32"><path d="M22 5.16c-.406-.054-1.806-.16-3.43-.16-3.4 0-5.733 1.825-5.733 5.17v2.882H9v3.913h3.837V27h4.604V16.965h3.824l.587-3.913h-4.41v-2.5c0-1.123.348-1.903 2.2-1.903H22V5.16z" fill-rule="evenodd"/></symbol>
     <!-- social share twitter -->
@@ -16,5 +17,5 @@
     <!-- close -->
     <symbol id="close" width="24" height="24" viewBox="0 0 24 24"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path><path d="M0 0h24v24H0z" fill="none"></path></symbol>
     <!-- external-link -->
-    <symbol id="external-link" viewBox="0 0 512 512"><path fill="currentColor" d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"></path></symbol>
+    <symbol id="external-link" viewBox="0 0 512 512"><path d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"></path></symbol>
 </svg>
